--- a/Source/SVWidgetsLib/FilterParameterWidgets/UI_Files/LinkedPathCreationWidget.ui
+++ b/Source/SVWidgetsLib/FilterParameterWidgets/UI_Files/LinkedPathCreationWidget.ui
@@ -11,6 +11,9 @@
    </rect>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
+   <property name="spacing">
+    <number>2</number>
+   </property>
    <property name="leftMargin">
     <number>2</number>
    </property>
@@ -31,6 +34,22 @@
     </widget>
    </item>
    <item>
+    <spacer name="horizontalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>24</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
     <widget class="DataArrayPathDisplay" name="dataPathDisplay" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -41,9 +60,9 @@
     </widget>
    </item>
    <item>
-    <widget class="QtSStringEdit" name="stringEdit" native="true">
+    <widget class="QtSStringEdit" name="dataArrayPathStringEdit" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
