--- a/Source/SVWidgetsLib/Widgets/UI_Files/DataArrayPathDisplay.ui
+++ b/Source/SVWidgetsLib/Widgets/UI_Files/DataArrayPathDisplay.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>297</width>
-    <height>21</height>
+    <width>613</width>
+    <height>24</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -148,6 +148,9 @@
         <property name="text">
          <string>/</string>
         </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
         <property name="margin">
          <number>2</number>
         </property>
@@ -159,7 +162,7 @@
    <item>
     <widget class="DataPathLabel" name="dataArrayPathLabel">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
